plugins {
  id 'java'
}

group = 'sc-meta-util'
version = '1.0'

sourceCompatibility = targetCompatibility = 1.21

compileJava {
  options.encoding = 'UTF-8'
  options.compilerArgs << '--add-exports' << 'java.base/jdk.internal.access=ALL-UNNAMED' << '--add-opens' << 'java.base/jdk.internal.access=ALL-UNNAMED' << '--add-exports' << 'java.base/jdk.internal.reflect=ALL-UNNAMED'
}

repositories {
  mavenCentral()
  mavenLocal()
}

dependencies {
  implementation "legend:lod:snapshot"
  implementation "com.opencsv:opencsv:5.8"
  implementation "commons-net:commons-net:3.9.0"
  implementation "commons-cli:commons-cli:1.6.0"
}

jar {
  manifest {
    attributes(
      'Main-Class': 'org.legendofdragoon.meta.Scraper'
    )
  }

  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
  from {
    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
}
